--- a/frontend/src/components/header/Header.css
+++ b/frontend/src/components/header/Header.css
@@ -1,34 +1,130 @@
 .header {
-  background-color: #2c3238;
-  margin: 0;
-  padding: 30px 0;
+  background-color: var(--primary-color-1);
+  padding: 2em 0;
 }
 
-.row {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+.header-link {
+  text-decoration: none;
 }
 
 .header-title {
-  color: #fff;
-  font-size: 1.5rem;
   text-transform: uppercase;
+  margin-top: 1rem;
+  letter-spacing: 2px;
+  font-weight: 400;
+  color: #fff;
+  font-size: 1em;
+}
+
+.nav-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.nav {
+  max-width: 100%;
+  padding: 1.5rem 1rem;
+}
+
+.nav-toggle {
+  background-color: transparent;
+  width: 5em;
+  height: 3em;
+  line-height: 1;
+  font-size: 1rem;
+  border: 1px solid transparent;
+  border-color: #ffffff1a;
+  padding: 0.25rem 0.75rem;
+  cursor: pointer;
+  transition: opacity 1s ease;
+
+  position: absolute;
+  right: 0;
+}
+
+.nav-toggle:focus,
+.nav-toggle:hover {
+  opacity: 0.75;
+}
+
+.hamburger {
+  width: 50%;
+  position: relative;
+}
+
+.hamburger,
+.hamburger::before,
+.hamburger::after {
+  display: block;
+  height: 3px;
+  margin: 0 auto;
+  background: #fff;
+}
+
+.hamburger::before,
+.hamburger::after {
+  content: "";
+  width: 100%;
+}
+
+.hamburger::before {
+  transform: translateY(-8px);
+}
+
+.hamburger::after {
+  transform: translateY(5px);
+}
+
+.nav {
+  visibility: hidden;
+  height: 0;
+  position: absolute;
+  font-size: 1rem;
+}
+
+.nav--visible {
+  visibility: visible;
+  height: auto;
+  position: relative;
 }
 
 .nav-list {
-  display: flex;
   list-style: none;
-  margin: 0 0.6em;
+  margin: 1em 0.75em;
+  font-size: 0.75rem;
+  font-weight: 100;
+}
+
+.nav-items {
+  margin-top: 10px;
 }
 
 .nav-link {
-  color: #6e7278;
+  color: #ffffff;
   text-decoration: none;
   text-transform: uppercase;
 }
 
-.lucide-shopping-cart,
-.lucide-user {
+.shopping-cart,
+.user {
   margin: -3px 6px;
+}
+
+@media (min-width: 700px) {
+  .row {
+    display: flex;
+    justify-content: space-between;
+  }
+  .nav {
+    visibility: visible;
+    display: contents;
+  }
+  .nav-toggle {
+    display: none;
+  }
+
+  .nav-list {
+    display: flex;
+    margin: 0;
+  }
 }
