--- a/frontend/src/screens/HomeScreen/HomeScreen.css
+++ b/frontend/src/screens/HomeScreen/HomeScreen.css
@@ -1,3 +1,15 @@
 .homeScreen-title {
   margin-top: 10px;
 }
+
+.product-title {
+  margin-top: 10px;
+}
+
+@media (min-width: 700px) {
+  .product-row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+}
